--- a/k8s/hello-deploy-v1.yaml
+++ b/k8s/hello-deploy-v1.yaml
@@ -5,6 +5,7 @@ metadata:
     app: hello
     version: v1
   name: hello-v1
+  namespace: 
 spec:
   replicas: 1
   selector:
@@ -18,6 +19,6 @@ spec:
         version: v1
     spec:
       containers:
-      - image: registry.ocp.zyl.io:5000/hello:v1
+      - image: core.apps.ocp.zyl.io/hello/hello:v1
         imagePullPolicy: Always
         name: hello
