--- a/greeter/Makefile
+++ b/greeter/Makefile
@@ -1,5 +1,6 @@
-IMAGE_VERSION ?= v2
-IMG ?= registry.ocp.zyl.io:5000/greeter:$(IMAGE_VERSION)
+IMAGE_VERSION ?= v3
+#IMG ?= registry.ocp.zyl.io:5000/greeter:$(IMAGE_VERSION)
+IMG ?= core.apps.ocp.zyl.io/hello/greeter:$(IMAGE_VERSION)
 
 all:
 	podman build -t $(IMG) .
