--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
   - name: http
     port: 9080
-    targetPort: 9080
+    targetPort: web
     protocol: TCP
   selector:
     app: hello
