--- a/k8s/deploy/greeter-2.yaml
+++ b/k8s/deploy/greeter-2.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: greeter
     version: v3.0
-  name: greeter-v3.0
+  name: greeter-v3.0-2
 spec:
   replicas: 1
   selector:
@@ -29,4 +29,4 @@ spec:
           protocol: TCP
         env:
         - name: MESSAGE
-          value: 'Http Hello'
+          value: 'Http 2 Hello'
