--- a/k8s/deploy/greeter-2.yaml
+++ b/k8s/deploy/greeter-2.yaml
@@ -20,7 +20,7 @@ spec:
         version: v3.0
     spec:
       containers:
-      - image: core.apps.ocp.zyl.io/greeter/greeter:v3.0
+      - image: core.apps.ocp.zyl.io/hello/greeter:v3.0
         imagePullPolicy: Always
         name: greeter
         ports:
