--- a/k8s/deploy/greeter-1.yaml
+++ b/k8s/deploy/greeter-1.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: greeter
     version: v3.0-1
-  name: greeter-v3.0-1
+  name: greeter-v3-0-1
 spec:
   replicas: 1
   selector:
