--- a/k8s/deploy/greeter-2.yaml
+++ b/k8s/deploy/greeter-2.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: greeter
     version: v3.0-2
-  name: greeter-v3.0-2
+  name: greeter-v3-0-2
 spec:
   replicas: 1
   selector:
