--- a/k8s/deploy/publisher.yaml
+++ b/k8s/deploy/publisher.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: publisher
     version: v3.0
-  name: publisher-v3.0
+  name: publisher-v3-0
 spec:
   replicas: 1
   selector:
