--- a/k8s/networking/greeter-gateway.yaml
+++ b/k8s/networking/greeter-gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: greeter
+  name: hello
 spec:
   # use Istio default gateway implementation
   selector:
@@ -12,17 +12,17 @@ spec:
       name: http-80
       protocol: HTTP
     hosts:
-    - "greeter.example.com"
+    - "*"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: greeter-1
+  name: hello-1
 spec:
   hosts:
-  - greeter.example.com
+  - '*'
   gateways:
-  - greeter
+  - hello
   http:
   - match:
     - headers:
@@ -30,9 +30,9 @@ spec:
           exact: jason
     route:
     - destination:
-        host: greeter
+        host: hello
         subset: v3-0-3
   - route:
     - destination:
-        host: greeter
+        host: hello
         subset: v3-0-2
