--- a/hello/Dockerfile
+++ b/hello/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install -i $INDEX_URL --no-cache-dir -r requirements.txt
 
 ENV PORT 9080
 
+COPY lib/*    ./lib/
 COPY hello.py ./
 
 EXPOSE $PORT
