--- a/k8s/networking/destination-rule-publisher.yaml
+++ b/k8s/networking/destination-rule-publisher.yaml
@@ -1,9 +1,9 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: greeter
+  name: publisher
 spec:
-  host: greeter
+  host: publisher
   subsets:
   - name: v3-0-1
     labels:
