--- a/k8s/networking/virtual-service-greeter-user-agent.yaml
+++ b/k8s/networking/virtual-service-greeter-user-agent.yaml
@@ -6,7 +6,15 @@ spec:
   hosts:
   - greeter
   http:
-  - route:
+  - match:
+    - headers:
+        user-agent:
+          exact: jason
+    route:
     - destination:
         host: greeter
         subset: v3-1
+  - route:
+    - destination:
+        host: greeter
+        subset: v3-0-3
