--- a/k8s/networking/virtual-service-publisher-user-agent.yaml
+++ b/k8s/networking/virtual-service-publisher-user-agent.yaml
@@ -6,7 +6,15 @@ spec:
   hosts:
   - publisher
   http:
-  - route:
+  - match:
+    - headers:
+        user-agent:
+          exact: jason
+    route:
     - destination:
         host: publisher
         subset: v3-1
+  - route:
+    - destination:
+        host: publisher
+        subset: v3-0-3
