--- a/greeter/Makefile
+++ b/greeter/Makefile
@@ -1,9 +1,8 @@
-IMAGE_VERSION ?= v3.1
-#IMG ?= registry.ocp.zyl.io:5000/greeter:$(IMAGE_VERSION)
+IMAGE_VERSION ?= v3.2
 IMG ?= core.apps.ocp.zyl.io/hello/greeter:$(IMAGE_VERSION)
 
 BUILDAH_FORMAT ?= docker
 
 all:
-	podman build --format docker -t $(IMG) .
+	podman build --no-cache --format docker -t $(IMG) .
 	podman push --tls-verify=false --authfile ~/pull-secret-2.json $(IMG)
