--- a/k8s/deploy/publisher.yaml
+++ b/k8s/deploy/publisher.yaml
@@ -3,24 +3,24 @@ kind: Deployment
 metadata:
   labels:
     app: publisher
-    version: v3.1
-  name: publisher-v3-1
+    version: v3.2
+  name: publisher-v3-2
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: publisher
-      version: v3.1
+      version: v3.2
   template:
     metadata:
       annotations:
         sidecar.istio.io/inject: "True"
       labels:
         app: publisher
-        version: v3.1
+        version: v3.2
     spec:
       containers:
-      - image: core.apps.ocp.zyl.io/hello/publisher:v3.1
+      - image: core.apps.ocp.zyl.io/hello/publisher:v3.2
         imagePullPolicy: Always
         name: publisher
         ports:
@@ -30,3 +30,28 @@ spec:
         env:
         - name: GREETER
           value: 'http://greeter:9080'
+        - name: JAEGER_ONE_SPAN_PER_RPC
+          value: 'False'
+      - name: jaeger-agent
+        image: jaegertracing/jaeger-agent:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+          - containerPort: 5775
+            name: zk-compact-trft
+            protocol: UDP
+          - containerPort: 5778
+            name: config-rest
+            protocol: TCP
+          - containerPort: 6831
+            name: jg-compact-trft
+            protocol: UDP
+          - containerPort: 6832
+            name: jg-binary-trft
+            protocol: UDP
+          - containerPort: 14271
+            name: admin-http
+            protocol: TCP
+        args:
+          - --reporter.grpc.host-port=dns:///jaeger-collector-headless.istio-system:14250
+          - --reporter.type=grpc
+          - --log-level=debug
