--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -8,8 +8,7 @@ ENV INDEX_URL https://mirrors.aliyun.com/pypi/simple
 RUN pip install -i $INDEX_URL --no-cache-dir -r requirements.txt
 
 ENV PORT 9080
-
-COPY lib/*    ./lib/
+COPY lib/tracing.py ./lib/tracing.py
 COPY publisher.py ./
 
 EXPOSE $PORT
