--- a/hello/requirements.txt
+++ b/hello/requirements.txt
@@ -1,3 +1,7 @@
-flask
+Flask
 requests
-prometheus_flask_exporter
+tornado<6,>=4.1
+Werkzeug
+jaeger-client
+opentracing
+opentracing-instrumentation
