--- a/k8s/deploy/greeter.yaml
+++ b/k8s/deploy/greeter.yaml
@@ -3,24 +3,24 @@ kind: Deployment
 metadata:
   labels:
     app: greeter
-    version: v3.1
-  name: greeter-v3-1
+    version: v3.2
+  name: greeter-v3-2
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: greeter
-      version: v3.1
+      version: v3.2
   template:
     metadata:
       annotations:
         sidecar.istio.io/inject: "True"
       labels:
         app: greeter
-        version: v3.1
+        version: v3.2
     spec:
       containers:
-      - image: core.apps.ocp.zyl.io/hello/greeter:v3.0
+      - image: core.apps.ocp.zyl.io/hello/greeter:v3.2
         imagePullPolicy: Always
         name: greeter
         ports:
@@ -29,4 +29,29 @@ spec:
           protocol: TCP
         env:
         - name: MESSAGE
-          value: 'Http V3.1 Hello'
+          value: 'Http V3.2 Hello'
+        - name: JAEGER_ONE_SPAN_PER_RPC
+          value: 'False'
+      - name: jaeger-agent
+        image: jaegertracing/jaeger-agent:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+          - containerPort: 5775
+            name: zk-compact-trft
+            protocol: UDP
+          - containerPort: 5778
+            name: config-rest
+            protocol: TCP
+          - containerPort: 6831
+            name: jg-compact-trft
+            protocol: UDP
+          - containerPort: 6832
+            name: jg-binary-trft
+            protocol: UDP
+          - containerPort: 14271
+            name: admin-http
+            protocol: TCP
+        args:
+          - --reporter.grpc.host-port=dns:///jaeger-collector-headless.istio-system:14250
+          - --reporter.type=grpc
+          - --log-level=debug
