--- a/k8s/networking/destination-rule-greeter.yaml
+++ b/k8s/networking/destination-rule-greeter.yaml
@@ -5,15 +5,9 @@ metadata:
 spec:
   host: greeter
   subsets:
-  - name: v3-0-1
-    labels:
-      version: v3.0-1
-  - name: v3-0-2
-    labels:
-      version: v3.0-2
-  - name: v3-0-3
-    labels:
-      version: v3.0-3
   - name: v3-1
     labels:
       version: v3.1
+  - name: v3-2
+    labels:
+      version: v3.2
