--- a/k8s/networking/hello-gateway-vs-v3-2.yaml
+++ b/k8s/networking/hello-gateway-vs-v3-2.yaml
@@ -11,7 +11,7 @@ spec:
       name: http-80
       protocol: HTTP
     hosts:
-    - "hello.example.com"
+    - "*"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -19,19 +19,14 @@ metadata:
   name: hello
 spec:
   hosts:
-  - 'hello.example.com'
+  - '*'
   gateways:
   - hello
   http:
   - match:
-    - headers:
-        user-agent:
-          exact: jason
+    - uri:
+        exact: /
     route:
     - destination:
         host: hello
-        subset: v3-1
-  - route:
-    - destination:
-        host: hello
-        subset: v3-0
+        subset: v3-2
