--- a/k8s/deploy/hello.yaml
+++ b/k8s/deploy/hello.yaml
@@ -3,24 +3,24 @@ kind: Deployment
 metadata:
   labels:
     app: hello
-    version: v3.2
-  name: hello-v3-2
+    version: v4.0
+  name: hello-v4-0
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: hello
-      version: v3.2
+      version: v4.0
   template:
     metadata:
       annotations:
         sidecar.istio.io/inject: "True"
       labels:
         app: hello
-        version: v3.2
+        version: v4.0
     spec:
       containers:
-      - image: core.apps.ocp.zyl.io/hello/hello:v3.2
+      - image: core.apps.ocp.zyl.io/hello/hello:v4.0
         imagePullPolicy: Always
         name: hello
         ports:
@@ -31,9 +31,29 @@ spec:
         - name: PUBLISHER
           value: 'http://publisher:9080'
         - name: GREETER
-          value: 'http://greeter:9080'
-        # ref: https://www.jaegertracing.io/docs/1.17/client-features
-        - name: JAEGER_AGENT_HOST
-          value: jaeger-agent.istio-system
+          value: 'greeter-grpc:9080'
         - name: JAEGER_ONE_SPAN_PER_RPC
           value: 'False'
+      - name: jaeger-agent
+        image: jaegertracing/jaeger-agent:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+          - containerPort: 5775
+            name: zk-compact-trft
+            protocol: UDP
+          - containerPort: 5778
+            name: config-rest
+            protocol: TCP
+          - containerPort: 6831
+            name: jg-compact-trft
+            protocol: UDP
+          - containerPort: 6832
+            name: jg-binary-trft
+            protocol: UDP
+          - containerPort: 14271
+            name: admin-http
+            protocol: TCP
+        args:
+          - --reporter.grpc.host-port=dns:///jaeger-collector-headless.istio-system:14250
+          - --reporter.type=grpc
+          - --log-level=debug
