--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -8,8 +8,9 @@ ENV INDEX_URL https://mirrors.aliyun.com/pypi/simple
 RUN pip install -i $INDEX_URL --no-cache-dir -r requirements.txt
 
 ENV PORT 9080
-COPY lib/tracing.py ./lib/tracing.py
+
 COPY publisher.py ./
+COPY lib/*.py ./lib/
 
 EXPOSE $PORT
 ENTRYPOINT ["python", "publisher.py"]
