--- a/k8s/deploy/publisher.yaml
+++ b/k8s/deploy/publisher.yaml
@@ -29,9 +29,7 @@ spec:
           protocol: TCP
         env:
         - name: GREETER
-          value: 'greeter-grpc:9080'
-        - name: JAEGER_ONE_SPAN_PER_RPC
-          value: 'False'
+          value: 'greeter-grpc.hello.svc.cluster.local:9080'
       - name: jaeger-agent
         image: jaegertracing/jaeger-agent:1.17.0
         imagePullPolicy: IfNotPresent
