--- a/k8s/service/greeter.yaml
+++ b/k8s/service/greeter.yaml
@@ -7,7 +7,7 @@ metadata:
   name: greeter-grpc
 spec:
   ports:
-  - name: http
+  - name: grpc
     port: 9080
     targetPort: 9080
     protocol: TCP
