--- a/k8s/deploy/greeter.yaml
+++ b/k8s/deploy/greeter.yaml
@@ -31,7 +31,7 @@ spec:
         - name: MESSAGE
           value: 'Http V3.2 Hello'
         - name: JAEGER_ONE_SPAN_PER_RPC
-          value: 'False'
+          value: 'True'
       - name: jaeger-agent
         image: jaegertracing/jaeger-agent:1.17.0
         imagePullPolicy: IfNotPresent
