--- a/k8s/deploy/publisher.yaml
+++ b/k8s/deploy/publisher.yaml
@@ -31,7 +31,7 @@ spec:
         - name: GREETER
           value: 'http://greeter:9080'
         - name: JAEGER_ONE_SPAN_PER_RPC
-          value: 'False'
+          value: 'True'
       - name: jaeger-agent
         image: jaegertracing/jaeger-agent:1.17.0
         imagePullPolicy: IfNotPresent
