--- a/k8s/networking/virtual-service-greeter-headers.yaml
+++ b/k8s/networking/virtual-service-greeter-headers.yaml
@@ -8,7 +8,7 @@ spec:
   http:
   - match:
     - headers:
-        baggage-user-agent:
+        user-agent:
           exact: jason
     route:
     - destination:
